2011-04-08  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: Set OBJCXX to ${CXX}, not to the literal CXX.
	* configure: Updated.

2011-04-08  Riccardo Mottola  <rm@gnu.org>

	* target.make: Override gcc's default relax option sent to the
	linker in case of relative linking -Wl,-r.  This should affect
	only SPARC and a few others uncommon archs and be ignored on the
	others.

2011-04-08  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Instance/application.make
	($(APP_DIR)/Resources/$(GNUSTEP_INSTANCE).desktop): Make the
	.desktop file executable after installing it (Suggestion from
	"Philippe Roussel" <p.o.roussel@free.fr>).

2011-04-08  Nicola Pero  <nicola.pero@meta-innovation.com>

	* messages.make (INSIDE_ECHO_MISSING_DOCUMENTATION): Renamed to
	ALWAYS_INSIDE_ECHO_MISSING_DOCUMENTATION, and moved it outside of
	the if/else.
	* Instance/Documentation/texi.make (internal-textdoc-install_):
	Use ALWAYS_INSIDE_ECHO_MISSING_DOCUMENTATION instead of
	INSIDE_ECHO_MISSING_DOCUMENTATION.  This fixes the rule when
	messages=yes.  Issue reported by Sebastian Reitenbach
	<buzzdee@web.de>.
	
2011-04-04  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac:
	* configure:
	Fake the ObjC++ tests using C++ since only really new versions of
	autoconf seem to support ObjC++ and we need things to work on older
	systems.

2011-03-22  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac:
	* gnustep-config.in:
	* TestFramework/gnustep-tests.in:
	Change to only require ObjC++ support (for the test framework).
	Assume C++ is supported even if it actually isn't, since we usually
	don't care.

2011-03-22  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: work around the fact that AC_PROG_CXX is buggy and
	reports a compiler even when no working compiler exists.  So if a
	test compilation fails with the compiler it returns, we clear CXX
	The compilation is done for an Objective-C++ test file since that's
	what we actually want a C++ compiler for normally.
